...

@Preview
@Composable
fun PreviewNoteCard() =
    NotyPreview {
        NoteCard(
            title = "Lorem Ipsum",
            note = "Here is note body...",
            isPinned = true,
            onNoteClick = {},
        )
    }

...
